closes #129: fix logo on mobile

--- a/app/assets/stylesheets/layouts/in_application/header_responsive.scss
+++ b/app/assets/stylesheets/layouts/in_application/header_responsive.scss
@@ -41,4 +41,17 @@ header{
       
     }
   }
+
+  @media (max-width: $xl){
+    .logo{
+      padding: 10px;
+      img{ position: initial; }
+    }
+    nav .links a.nav_link {
+      padding-right: 10px;
+    }
+    .container-fluid{
+      padding: 0 20px !important;
+    }
+  }
 }
