--- a/app/assets/stylesheets/static_pages/home_responsive.scss
+++ b/app/assets/stylesheets/static_pages/home_responsive.scss
@@ -42,6 +42,9 @@
   @media (max-width: $sm){
     section.find_storage{
       .button.blue{ margin-top: 15px; }
+      .find_storage_rectangle{
+        margin-top: 170px;
+      }
     }
     section.ti_storage_benefits{
       .benefit{
